# rie-ioe

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  publish.yml
src/: commands.rs  config.rs  main.rs  render.rs  visa.rs
src/resources/: default-config.toml
