[package]
name = "fake-rie"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
toml = "1.1.2+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
imageproc = "0.26.2"
chrono = "0.4.44"
reqwest = "0.13.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ab_glyph = "0.2.32"
